--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ env:
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then source ./scripts/install_swift.sh; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install openssl; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install libressl; fi
 
 script:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then swiftlint; fi
